iadd compiler
