# models/service_port.go
@@ -1,0 +1,73 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// ServicePort service port
+// swagger:model servicePort
+
+type ServicePort struct {
+
+	// number
+	// Required: true
+	Number *int32 `json:"number"`
+
+	// protocol
+	Protocol string `json:"protocol,omitempty"`
+}
+
+/* polymorph servicePort number false */
+
+/* polymorph servicePort protocol false */
+
+// Validate validates this service port
+func (m *ServicePort) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateNumber(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ServicePort) validateNumber(formats strfmt.Registry) error {
+
+	if err := validate.Required("number", "body", m.Number); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ServicePort) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ServicePort) UnmarshalBinary(b []byte) error {
+	var res ServicePort
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
