# models/service_specification.go
@@ -6,6 +6,8 @@ package models
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"strconv"
+
 	strfmt "github.com/go-openapi/strfmt"
 
 	"github.com/go-openapi/errors"
@@ -18,43 +20,58 @@ import (
 
 type ServiceSpecification struct {
 
+	// containers
+	Containers []*Container `json:"containers"`
+
 	// depends
 	Depends string `json:"depends,omitempty"`
-
-	// images
-	Images []string `json:"images"`
 
 	// name
 	// Required: true
 	Name *string `json:"name"`
+
+	// ports
+	Ports []*ServicePort `json:"ports"`
 
 	// reference
 	Reference string `json:"reference,omitempty"`
 
 	// replicas
 	Replicas int32 `json:"replicas,omitempty"`
+
+	// shards
+	Shards int32 `json:"shards,omitempty"`
 }
+
+/* polymorph serviceSpecification containers false */
 
 /* polymorph serviceSpecification depends false */
 
-/* polymorph serviceSpecification images false */
-
 /* polymorph serviceSpecification name false */
+
+/* polymorph serviceSpecification ports false */
 
 /* polymorph serviceSpecification reference false */
 
 /* polymorph serviceSpecification replicas false */
 
+/* polymorph serviceSpecification shards false */
+
 // Validate validates this service specification
 func (m *ServiceSpecification) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	if err := m.validateImages(formats); err != nil {
+	if err := m.validateContainers(formats); err != nil {
 		// prop
 		res = append(res, err)
 	}
 
 	if err := m.validateName(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validatePorts(formats); err != nil {
 		// prop
 		res = append(res, err)
 	}
@@ -65,10 +82,28 @@ func (m *ServiceSpecification) Validate(formats strfmt.Registry) error {
 	return nil
 }
 
-func (m *ServiceSpecification) validateImages(formats strfmt.Registry) error {
+func (m *ServiceSpecification) validateContainers(formats strfmt.Registry) error {
 
-	if swag.IsZero(m.Images) { // not required
+	if swag.IsZero(m.Containers) { // not required
 		return nil
+	}
+
+	for i := 0; i < len(m.Containers); i++ {
+
+		if swag.IsZero(m.Containers[i]) { // not required
+			continue
+		}
+
+		if m.Containers[i] != nil {
+
+			if err := m.Containers[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("containers" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
@@ -78,6 +113,33 @@ func (m *ServiceSpecification) validateName(formats strfmt.Registry) error {
 
 	if err := validate.Required("name", "body", m.Name); err != nil {
 		return err
+	}
+
+	return nil
+}
+
+func (m *ServiceSpecification) validatePorts(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Ports) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Ports); i++ {
+
+		if swag.IsZero(m.Ports[i]) { // not required
+			continue
+		}
+
+		if m.Ports[i] != nil {
+
+			if err := m.Ports[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("ports" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
